--- a/TBETA.ipynb
+++ b/TBETA.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 279,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e98b491032d94595b95a663471d364cd",
+       "model_id": "b4b94aa1f1e84e94877be1c75fd58aa6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 280,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -441,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 277,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -472,10 +472,16 @@
     "                if atom[1][0]>-sqrt(3)*1.5 and atom[1][1]<3:\n",
     "                    ax.text(atom[1][0]*v1[0]+atom[1][1]*v2[0]+p[0]+xshift,atom[1][0]*v1[1]+atom[1][1]*v2[1]+p[1]+yshift,\n",
     "                            s=str(count),color='r',fontsize=13)\n",
-    "            if A==180:\n",
-    "                if atom[1][0]>=-1 and atom[1][0]<=2*D-2:\n",
-    "                    ax.text(atom[1][0]*v1[0]+atom[1][1]*v2[0]+p[0]+xshift,atom[1][0]*v1[1]+atom[1][1]*v2[1]+p[1]+yshift,\n",
-    "                            s=str(count),color='r',fontsize=13)\n",
+    "            if A==180: #checks which basis the atom is in to assign different limits\n",
+    "                if str(atom[0])[19]=='0':\n",
+    "                    if atom[1][0]>=-1 and atom[1][0]<=2*D-3:\n",
+    "                        ax.text(atom[1][0]*v1[0]+atom[1][1]*v2[0]+p[0]+xshift,atom[1][0]*v1[1]+atom[1][1]*v2[1]+p[1]+yshift,\n",
+    "                                s=str(count),color='r',fontsize=13)\n",
+    "                if str(atom[0])[19]=='1':\n",
+    "                    if atom[1][0]>=0 and atom[1][0]<=2*D-2:\n",
+    "                        ax.text(atom[1][0]*v1[0]+atom[1][1]*v2[0]+p[0]+xshift,atom[1][0]*v1[1]+atom[1][1]*v2[1]+p[1]+yshift,\n",
+    "                                s=str(count),color='r',fontsize=13)\n",
+    "                \n",
     "        kwant.plotter.plot(sys,site_size=0,site_color='black',lead_site_size=0.25,site_edgecolor='black',lead_color='black',ax=ax) #plots the outline of the system\n",
     "        xaxis=ax.get_xlim() #get the limits of x and y for further plotting\n",
     "        yaxis=ax.get_ylim()\n",
@@ -662,7 +668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 168,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -670,26 +676,24 @@
     "def cond_and_dos(Emin,Emax):\n",
     "    t=2.75\n",
     "    trans=[] #empty list to store values\n",
-    "    trans2=[]\n",
+    "    perf_trans=np.load('perfect/con_'+str(W)+'_3k.npz') #loads previously calculated perfect lead transmission data\n",
     "    dos=[]\n",
-    "    dos2=[]\n",
+    "    perf_dos=np.load('perfect/dos_'+str(W)+'_3k.npz') #loads previously calculated perfect lead dos data\n",
     "    energies=np.linspace((Emin-0.00001)*t, (Emax+0.00001)*t, num=300) #specify energy grid\n",
-    "    perfsys=perfect_system(t) #obtain the geometry of the pristine lead system\n",
+    "    cutmin=int((Emin+3)*500+1) #defines places where we need to cut our perfect trans and dos arrays.\n",
+    "    cutmax=int((Emax+3)*500-1)\n",
     "    for i,energy in enumerate(energies):\n",
     "        if i%10==0:\n",
     "            progress.value=i/5 \n",
     "        dos.append(np.sum(kwant.ldos(fsys,energy))) #sum over all atom ldos\n",
-    "        dos2.append(np.sum(kwant.ldos(perfsys,energy))) \n",
     "        smatrix = kwant.smatrix(fsys, energy,check_hermiticity=False) #calculates the S matrix of the system in interest\n",
     "        trans.append(smatrix.transmission(1,0)) #calcualtes the transmission coefficient\n",
-    "        smatrix2 = kwant.smatrix(perfsys, energy,check_hermiticity=False) #same but for ideal lead system\n",
-    "        trans2.append(smatrix2.transmission(1,0))\n",
     "    for j in range(len(energies)):\n",
     "        energies[j]=energies[j]/t #convert energies back in terms of t\n",
     "    progress.value=61\n",
     "    fig, (ax, ax2) = plt.subplots(1, 2, figsize=(20,10)) \n",
     "    ax.plot(energies, trans, label=\"Junction\")\n",
-    "    ax.plot(energies, trans2, label=\"Lead\")\n",
+    "    ax.plot(perf_trans['arr_0'][cutmin:cutmax], perf_trans['arr_1'][cutmin:cutmax], label=\"Lead\")\n",
     "    ax.legend()\n",
     "    ax.set_xlabel(\"Energy (t)\")\n",
     "    ax.set_ylabel(\"Conductance (e\\N{SUPERSCRIPT TWO}/h)\")\n",
@@ -697,7 +701,7 @@
     "    ax.set_xticks(np.arange(Emin, Emax+(Emax-Emin)/10, round((Emax-Emin)/10,2)))\n",
     "    ax.xaxis.set_tick_params(rotation=90)\n",
     "    ax2.plot(energies, dos,label='Junction')\n",
-    "    ax2.plot(energies, dos2,label='Lead')\n",
+    "    ax2.plot(perf_dos['arr_0'][cutmin:cutmax], perf_dos['arr_1'][cutmin:cutmax],label='Lead')\n",
     "    ax2.legend()\n",
     "    ax2.set_xlabel(\"Energy (t)\")\n",
     "    ax2.set_ylabel(\"DOS\")\n",
@@ -798,7 +802,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 275,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -888,7 +892,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 276,
    "metadata": {
     "scrolled": false
    },
@@ -896,7 +900,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "17904e6c2c76412baa52ac7fe157938c",
+       "model_id": "718e51ff7cf746288e0029f020ec7622",
        "version_major": 2,
        "version_minor": 0
       },
@@ -910,7 +914,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "979d8d00d9c04642a23bf0b418cab146",
+       "model_id": "6730ad8f633943309cc41e01f723434a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -924,7 +928,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "58e961f934e94baf8d956dd34dd075c4",
+       "model_id": "1ce39196b1cf4870b6f98696cc4ad772",
        "version_major": 2,
        "version_minor": 0
       },
@@ -975,13 +979,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 278,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1dfefe5fd17f41e180016b1832097886",
+       "model_id": "2e49c15c862c47cf927e4c69a011617d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -995,7 +999,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1921acedfa7d4879948b7448a9e49e49",
+       "model_id": "8d5b7b5a0838414ba0cdf8dc75da7197",
        "version_major": 2,
        "version_minor": 0
       },
