Added copy to clipboard functionality

--- a/TBETA.ipynb
+++ b/TBETA.ipynb
@@ -8,7 +8,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "591675c32831474a98d4ea7a54958ba5",
+       "model_id": "921a732bee5d411f97f69180763a6ba8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -67,6 +67,7 @@
     "from matplotlib import gridspec\n",
     "from ipywidgets import interact, interactive, fixed, interact_manual, HBox, Label\n",
     "import ipywidgets as widgets\n",
+    "import pyperclip\n",
     "\n",
     "\n",
     "MEDIUM_SIZE = 16\n",
@@ -708,7 +709,7 @@
     "    ax2.set_ylim(ymin=0)\n",
     "    ax2.set_xticks(np.arange(Emin, Emax+(Emax-Emin)/10, round((Emax-Emin)/10,2)))\n",
     "    ax2.xaxis.set_tick_params(rotation=90)\n",
-    "    return energies, trans, trans2, dos, dos2 "
+    "    return energies, trans, dos"
    ]
   },
   {
@@ -900,7 +901,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "96961aea7b914d3e95fa17f91ad0159d",
+       "model_id": "26fd3f78f9a64a53868a8eec445b6189",
        "version_major": 2,
        "version_minor": 0
       },
@@ -914,7 +915,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "eef5cc1ac6cc45ddbdc171118bb9a0b7",
+       "model_id": "e7e0a6496a564be79dd2765d6661f049",
        "version_major": 2,
        "version_minor": 0
       },
@@ -928,7 +929,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4db2a639cbad4107bfdf680f08126d03",
+       "model_id": "233c4cbc76814389b6178b3c2c06f806",
        "version_major": 2,
        "version_minor": 0
       },
@@ -974,18 +975,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Select the energy range ('*Min Energy*' and '*Max Energy*') and press '*Calculate*' for computing the conductance and the density of states of the designed GNR junction. The results are compared to that of the ideal leads. Since this computation may take some time, its progress is indicated by the progress bar."
+    "Select the energy range ('*Min Energy*' and '*Max Energy*') and press '*Calculate*' for computing the conductance and the density of states of the designed GNR junction. The results are compared to that of the ideal leads. Since this computation may take some time, its progress is indicated by the progress bar. You may copy the datasets to the clipboard. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a1224b4e3534485e93f749031d7917cf",
+       "model_id": "d8e6050cfe3a485aa4b8dfd6e157bdc4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -999,12 +1000,26 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ba90865850754ab4a5646101220c1563",
+       "model_id": "b0beafd0b81b46dea61436d0d14c6215",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
        "IntProgress(value=0, bar_style='info', description='Progress:', layout=Layout(visibility='hidden'), max=62)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "adffd3ca83af4201a55ae2e7b8fd8df3",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(Dropdown(description='Data', options=('Energy array', 'Conductance for GNR junction', 'D…"
       ]
      },
      "metadata": {},
@@ -1019,17 +1034,27 @@
     "interact_calc=interact.options(manual=True, manual_name=\"Calculate\")\n",
     "@interact_calc(Emin=widgets.FloatSlider(description_tooltip=\"Select the lowest energy of the desired range\",min=-3, max=3, step=0.1, value=-3, description=\"Min Energy (t)\",style=style),Emax=widgets.FloatSlider(min=-3, max=3, step=0.1, value=3,description_tooltip=\"Select the highest energy of the desired range\",description=\"Max Energy (t)\",style=style))\n",
     "def calculate_cond(Emin,Emax):\n",
-    "    global fsys, energies, trans, trans2, dos, dos2\n",
+    "    global fsys, energies, trans, dos\n",
     "    progress.layout.visibility=\"initial\" \n",
     "    fsys=sys.finalized()\n",
-    "    energies, trans, trans2, dos, dos2 = cond_and_dos(Emin,Emax)\n",
+    "    energies, trans, dos = cond_and_dos(Emin,Emax)\n",
     "    progress.layout.visibility=\"hidden\"\n",
-    "display(progress)"
+    "display(progress)\n",
+    "#copy to clipboard functionality. Creates a manual widget with a dropdown menu from which one can pick a dataset.\n",
+    "interact_save=interact.options(manual=True, manual_name=\"Copy to clipboard\")\n",
+    "@interact_save(Data=widgets.Dropdown(options=['Energy array','Conductance for GNR junction','DOS for GNR junction']))\n",
+    "def copy_clip(Data):\n",
+    "    if Data=='Energy array':\n",
+    "        pyperclip.copy('['+\",\".join([str(element) for element in energies.tolist()])+']')\n",
+    "    if Data=='Conductance for GNR junction':\n",
+    "        pyperclip.copy('['+\",\".join([str(element) for element in trans])+']')\n",
+    "    if Data=='DOS for GNR junction':\n",
+    "        pyperclip.copy('['+\",\".join([str(element) for element in dos])+']')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1054,29 +1079,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cba2c56e437a40b3a7e156b5f11295c2",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "interactive(children=(FloatText(value=0.5, description='Energy (t)', description_tooltip='Enter the energy at …"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "display(Single_en_at)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
