Added pyperclip to requirements

--- a/TBETA.ipynb
+++ b/TBETA.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "921a732bee5d411f97f69180763a6ba8",
+       "model_id": "422eaeef9cfa45aa85e7cb7e57c29562",
        "version_major": 2,
        "version_minor": 0
       },
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -442,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -542,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -563,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -583,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -631,7 +631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -669,7 +669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -714,7 +714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -803,7 +803,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -893,7 +893,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {
     "scrolled": false
    },
@@ -901,7 +901,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "26fd3f78f9a64a53868a8eec445b6189",
+       "model_id": "3be6c16e65234183a374397a7e847cf7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -915,7 +915,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e7e0a6496a564be79dd2765d6661f049",
+       "model_id": "852cfed3cbfd4eae8a56e4a20cd157ab",
        "version_major": 2,
        "version_minor": 0
       },
@@ -929,7 +929,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "233c4cbc76814389b6178b3c2c06f806",
+       "model_id": "4f716fb5555b4365b2bb40d1bccfbaf4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -986,7 +986,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d8e6050cfe3a485aa4b8dfd6e157bdc4",
+       "model_id": "dd09e64ea2cc4b36aa6a7535c2a5431f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1000,7 +1000,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b0beafd0b81b46dea61436d0d14c6215",
+       "model_id": "166484eef0c74e36b38c897a4212eadb",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1014,7 +1014,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "adffd3ca83af4201a55ae2e7b8fd8df3",
+       "model_id": "9a1f9944ed40491ea07da065fb2b42e3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1045,7 +1045,7 @@
     "@interact_save(Data=widgets.Dropdown(options=['Energy array','Conductance for GNR junction','DOS for GNR junction']))\n",
     "def copy_clip(Data):\n",
     "    if Data=='Energy array':\n",
-    "        pyperclip.copy('['+\",\".join([str(element) for element in energies.tolist()])+']')\n",
+    "        pyperclip.copy('['+\"\\n\".join([str(element) for element in energies])+']')\n",
     "    if Data=='Conductance for GNR junction':\n",
     "        pyperclip.copy('['+\",\".join([str(element) for element in trans])+']')\n",
     "    if Data=='DOS for GNR junction':\n",
