Copy to clipboard functionality

--- a/TBETA.ipynb
+++ b/TBETA.ipynb
@@ -669,7 +669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 239,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -709,6 +709,11 @@
     "    ax2.set_ylim(ymin=0)\n",
     "    ax2.set_xticks(np.arange(Emin, Emax+(Emax-Emin)/10, round((Emax-Emin)/10,2)))\n",
     "    ax2.xaxis.set_tick_params(rotation=90)\n",
+    "    #rounding values\n",
+    "    for i in range(len(energies)):\n",
+    "        energies[i]=round(energies[i],4)\n",
+    "        trans[i]=round(trans[i],4)\n",
+    "        dos[i]=round(dos[i],4)\n",
     "    return energies, trans, dos"
    ]
   },
@@ -980,13 +985,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 248,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "dd09e64ea2cc4b36aa6a7535c2a5431f",
+       "model_id": "4d77743408b9492fbf6e6e91cbf97ee9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1000,26 +1005,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "166484eef0c74e36b38c897a4212eadb",
+       "model_id": "981735d268aa4fa38fd6c9710b58169d",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
        "IntProgress(value=0, bar_style='info', description='Progress:', layout=Layout(visibility='hidden'), max=62)"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9a1f9944ed40491ea07da065fb2b42e3",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "interactive(children=(Dropdown(description='Data', options=('Energy array', 'Conductance for GNR junction', 'D…"
       ]
      },
      "metadata": {},
@@ -1040,16 +1031,24 @@
     "    energies, trans, dos = cond_and_dos(Emin,Emax)\n",
     "    progress.layout.visibility=\"hidden\"\n",
     "display(progress)\n",
-    "#copy to clipboard functionality. Creates a manual widget with a dropdown menu from which one can pick a dataset.\n",
-    "interact_save=interact.options(manual=True, manual_name=\"Copy to clipboard\")\n",
-    "@interact_save(Data=widgets.Dropdown(options=['Energy array','Conductance for GNR junction','DOS for GNR junction']))\n",
-    "def copy_clip(Data):\n",
-    "    if Data=='Energy array':\n",
-    "        pyperclip.copy('['+\"\\n\".join([str(element) for element in energies])+']')\n",
-    "    if Data=='Conductance for GNR junction':\n",
-    "        pyperclip.copy('['+\",\".join([str(element) for element in trans])+']')\n",
-    "    if Data=='DOS for GNR junction':\n",
-    "        pyperclip.copy('['+\",\".join([str(element) for element in dos])+']')"
+    "#copy to clipboard functionality. Creates a button which copies the datasets. The data is organized into columns.\n",
+    "#first column is energy, second is transmission, third is dos. Numbers are all rounded to 4 decimal places.\n",
+    "empty_string=\"\"\n",
+    "copy_button = widgets.Button(description = \"Copy data\",tooltip='First column is energy data, second is transmission data, third is dos data')\n",
+    "copy_button.on_click(copy_clip)\n",
+    "def copy_clip(b):\n",
+    "    dataset=np.array([list([format(ints,'.4f') for ints in energies]), list([format(ints,'.4f') for ints in trans]), list([format(ints,'.4f') for ints in dos])]).T.tolist()\n",
+    "    dataset_c=[]\n",
+    "    for i in range(len(dataset)):\n",
+    "        dataset_c.extend(dataset[i])\n",
+    "    empty_string=\"\"\n",
+    "    for i in range(int(len(dataset_c)/3)):\n",
+    "        if i==0:\n",
+    "            empty_string=\"\\t\".join(dataset_c[0:3])\n",
+    "        if i!=0:\n",
+    "            empty_string=empty_string+\"\\n\"+\"\\t\".join(dataset_c[int(3*i):int(3*i+3)])\n",
+    "    pyperclip.copy(empty_string)\n",
+    "display(copy_)"
    ]
   },
   {
