--- a/TBETA.ipynb
+++ b/TBETA.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "34d208d9e28740e290698c1f64a5331a",
+       "model_id": "090fd3528961458f8514856ba8a665e5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 180,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,6 +182,10 @@
     "    sys[graphene.shape(circle, (0, 0))] = e    # Build scattering region\n",
     "    sys2[graphene.shape(circle, (0, 0))] = e\n",
     "    sys[graphene.neighbors()] = t1\n",
+    "    sys2[graphene.neighbors()]=t1\n",
+    "    if A!=180 or A==180 and S!=0:\n",
+    "        sys.eradicate_dangling() #Delete dangling atoms before assigning more NN hopping terms\n",
+    "        sys2.eradicate_dangling()\n",
     "    if H==2:\n",
     "        sys[graphene.neighbors(2)] = t2\n",
     "    if H==3:\n",
@@ -193,10 +197,6 @@
     "    if H==3:\n",
     "        sys2[graphene.neighbors(2)] = t2\n",
     "        sys2[graphene.neighbors(3)] = t3\n",
-    "    if A!=180 or A==180 and S!=0:\n",
-    "        sys.eradicate_dangling() #Delete dangling atoms\n",
-    "        sys2.eradicate_dangling()\n",
-    "    \n",
     "    sites=list(sys.sites()) #Obtain list of sites for further use \n",
     "    #In the case of 120 degrees for wide ribbons, the scattering region overlaps with the leads, \n",
     "    #removing atoms outside the intended scattering region\n",
@@ -476,14 +476,28 @@
     "    else:\n",
     "        sys.attach_lead(lead1)\n",
     "        sys2.attach_lead(lead1)\n",
-    "    #assigns global variables that are used for further calculations    \n",
+    "    #assigns global variables that are used for further calculations\n",
     "    return sys, sys2, lead0, lead1, a, b, v1, v2, p1, p2, A, D, W, S, F, Q, H\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 181,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def hopping_lw(site1, site2): #Function defining the size of the edge lines connecting 1st, 2nd, and 3rd NN. \n",
+    "    if sqrt((site1.pos[0]-site2.pos[0])**2+(site1.pos[1]-site2.pos[1])**2)>0.8:\n",
+    "        edge_size=0.0001\n",
+    "    else:\n",
+    "        edge_size=0.1\n",
+    "    return edge_size"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 182,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -523,7 +537,6 @@
     "                    if atom[1][0]>=0 and atom[1][0]<=2*D-2:\n",
     "                        ax.text(atom[1][0]*v1[0]+atom[1][1]*v2[0]+p[0]+xshift,atom[1][0]*v1[1]+atom[1][1]*v2[1]+p[1]+yshift,\n",
     "                                s=str(count),color='r',fontsize=13)\n",
-    "                \n",
     "        kwant.plotter.plot(sys,site_size=0,site_color='black',lead_site_size=0.25,site_edgecolor='black',lead_color='black',hop_lw=hopping_lw,ax=ax) #plots the outline of the system\n",
     "        xaxis=ax.get_xlim() #get the limits of x and y for further plotting\n",
     "        yaxis=ax.get_ylim()\n",
@@ -583,21 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def hopping_lw(site1, site2): #Function defining the size of the edge lines connecting 1st, 2nd, and 3rd NN. \n",
-    "    if sqrt((site1.pos[0]-site2.pos[0])**2+(site1.pos[1]-site2.pos[1])**2)>0.8:\n",
-    "        edge_size=0.0001\n",
-    "    else:\n",
-    "        edge_size=0.1\n",
-    "    return edge_size"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -618,7 +617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -643,7 +642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -697,7 +696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -757,7 +756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -812,7 +811,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 196,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -858,7 +857,7 @@
     "        for wfn in psi:\n",
     "            J=kwant.operator.Current(fsys) \n",
     "            current=J(wfn) #get the local current value\n",
-    "            ovcurrent=list(map(operator.add, current,ovcurrent)) #add all the current values together from different bands at the same enrgy\n",
+    "            ovcurrent=list(map(operator.add, current,ovcurrent)) #add all the current values together from different bands at the same energy\n",
     "        values=list(ovcurrent)[:N] #only take one direction of current (have teh same value (signe diff) both directions n->m and m->n)\n",
     "        dim=abs(xaxis2[1]-xaxis2[0]) #dimension to normalize arrow size in the plot\n",
     "        normvalues=values/max(values)\n",
@@ -907,7 +906,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 183,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -998,7 +997,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 184,
    "metadata": {
     "scrolled": false
    },
@@ -1006,7 +1005,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5b0fd1df82634cbfb04e5ff6c4924aef",
+       "model_id": "189a4ccdef2a4400944eab1cffa49b89",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1020,7 +1019,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "514017f7758b4b0f840724e12e3a6f15",
+       "model_id": "66f1b612d597490595f4fa7693646c02",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1034,7 +1033,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "361d9779d5364ad5acbdd6813309d0c3",
+       "model_id": "619de609b3994a5bb85c9548fb26e59b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1085,13 +1084,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 185,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9b34246143e9490cb40b0e12f1dd12ef",
+       "model_id": "3b2b7ddc165a4c988891e73810d31015",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1105,7 +1104,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "380b83a400a94e35ae031c3862702a7b",
+       "model_id": "c6e0a4daa6d34092848a0fc1d333ed34",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1119,7 +1118,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e3f5937739a04bcb9fd9ecc445a99eff",
+       "model_id": "0e3d04a2b6bf428eba06fd86722af8b2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1149,7 +1148,6 @@
     "#first column is energy, second is transmission, third is dos. Numbers are all rounded to 4 decimal places.\n",
     "empty_string=\"\"\n",
     "copy_button = widgets.Button(description = \"Copy data\",tooltip='First column is energy data, second is transmission data, third is dos data')\n",
-    "copy_button.on_click(copy_clip)\n",
     "def copy_clip(b):\n",
     "    dataset=np.array([list([format(ints,'.4f') for ints in energies]), list([format(ints,'.4f') for ints in trans]), list([format(ints,'.4f') for ints in dos])]).T.tolist()\n",
     "    dataset_c=[]\n",
@@ -1162,12 +1160,13 @@
     "        if i!=0:\n",
     "            empty_string=empty_string+\"\\n\"+\"\\t\".join(dataset_c[int(3*i):int(3*i+3)])\n",
     "    pyperclip.copy(empty_string)\n",
+    "copy_button.on_click(copy_clip)\n",
     "display(copy_button)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 203,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1192,7 +1191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 204,
    "metadata": {
     "scrolled": false
    },
@@ -1200,7 +1199,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5f5b133c9eb8471ea0fb311426785875",
+       "model_id": "b6f11e8b972d4928b2e9b6aac747b65f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1215,13 +1214,6 @@
    "source": [
     "display(Single_en_at)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
